tests/compilefail27.out
[1mtests/compilefail27.pas:5:14: [0m[1m[91merror:[0m Constant 'pi' is not numeric. Cannot define constant 'negpi' by putting a sign before a non-numeric constant.
     5 | 	negpi = -pi;