tests/compilefail27.pas
program compilefail27(output);
{using a sign before a string}

const pi = '3.14';
	negpi = -pi;

begin
	writeln(pi);
	writeln(negpi);
end.
